# insult

./: .gitignore  Cargo.toml  README.md  install-flavor-all.sh  install-flavor.sh
examples/: minimal.rs
src/: config.rs  endings  lib.rs  main.rs  parse.rs  verbs  words.rs
src/words/: endings  nouns
