[package]
authors = ["jD91mZM2 <me@krake.one>"]
description = "insult is the command line \"utility\" to insult you with a \"Oh... Sir! The Insult Simulator\"-like fashion!"
license = "MIT"
name = "insult"
repository = "https://github.com/jD91mZM2/insult"
version = "1.1.4"

[dependencies]
rand = "0.3"
