[package]
authors = ["jD91mZM2 <me@krake.one>"]
description = "insult is the command line \"utility\" to insult you with a \"Oh... Sir! The Insult Simulator\"-like fashion!"
license = "MIT"
name = "insult"
repository = "https://github.com/jD91mZM2/insult"
version = "2.0.1"

[[bin]]
name = "insult"
path = "src/main.rs"

[dependencies]
rand = "0.4.2"

# These are only binary dependencies.
# See https://github.com/rust-lang/cargo/issues/1982.
failure = "0.1.1"
xdg = "2.1.0"

[lib]
name = "insult"
path = "src/lib.rs"
